--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -26,12 +26,14 @@ add_sources("Components_uber.cpp"
     PROJECTS Game
     SOURCE_GROUP "Components"
 		"Components/ActorState.cpp"
+		"Components/BulletTracer.cpp"
 		"Components/Crosshair.cpp"
 		"Components/IWeapon.cpp"
 		"Components/Player.cpp"
 		"Components/ShootAccuracy.cpp"
 		"Components/SpawnPoint.cpp"
 		"Components/ActorState.h"
+		"Components/BulletTracer.h"
 		"Components/Crosshair.h"
 		"Components/IWeapon.h"
 		"Components/Player.h"
