--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -26,18 +26,24 @@ add_sources("Components_uber.cpp"
     PROJECTS Game
     SOURCE_GROUP "Components"
 		"Components/ActorState.cpp"
+		"Components/AIController.cpp"
+		"Components/AIDetection.cpp"
 		"Components/BulletTracer.cpp"
 		"Components/Crosshair.cpp"
 		"Components/IWeapon.cpp"
 		"Components/Player.cpp"
 		"Components/ShootAccuracy.cpp"
+		"Components/Soldier1.cpp"
 		"Components/SpawnPoint.cpp"
 		"Components/ActorState.h"
+		"Components/AIController.h"
+		"Components/AIDetection.h"
 		"Components/BulletTracer.h"
 		"Components/Crosshair.h"
 		"Components/IWeapon.h"
 		"Components/Player.h"
 		"Components/ShootAccuracy.h"
+		"Components/Soldier1.h"
 		"Components/SpawnPoint.h"
 )
 
