Add EnemySpawnPoint Component

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -30,6 +30,7 @@ add_sources("Components_uber.cpp"
 		"Components/AIDetection.cpp"
 		"Components/BulletTracer.cpp"
 		"Components/Crosshair.cpp"
+		"Components/EnemySpawnPoint.cpp"
 		"Components/IAIActor.cpp"
 		"Components/IWeapon.cpp"
 		"Components/Player.cpp"
@@ -41,6 +42,7 @@ add_sources("Components_uber.cpp"
 		"Components/AIDetection.h"
 		"Components/BulletTracer.h"
 		"Components/Crosshair.h"
+		"Components/EnemySpawnPoint.h"
 		"Components/IAIActor.h"
 		"Components/IWeapon.h"
 		"Components/Player.h"
