Add WeaponAK47 component ,updated soldier1 added weapon to enemy ai and updated assets

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -37,6 +37,7 @@ add_sources("Components_uber.cpp"
 		"Components/ShootAccuracy.cpp"
 		"Components/Soldier1.cpp"
 		"Components/SpawnPoint.cpp"
+		"Components/WeaponAK47.cpp"
 		"Components/WeaponGlock.cpp"
 		"Components/ActorState.h"
 		"Components/AIController.h"
@@ -50,6 +51,7 @@ add_sources("Components_uber.cpp"
 		"Components/ShootAccuracy.h"
 		"Components/Soldier1.h"
 		"Components/SpawnPoint.h"
+		"Components/WeaponAK47.h"
 		"Components/WeaponGlock.h"
 )
 
