Add AlarmManager component

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -28,12 +28,16 @@ add_sources("Components_uber.cpp"
 		"Components/ActorState.cpp"
 		"Components/AIController.cpp"
 		"Components/AIDetection.cpp"
+		"Components/AlarmManager.cpp"
+		"Components/AlarmSpeaker.cpp"
 		"Components/BulletTracer.cpp"
 		"Components/Crosshair.cpp"
 		"Components/EnemySpawnPoint.cpp"
+		"Components/Health.cpp"
 		"Components/IAIActor.cpp"
 		"Components/IWeapon.cpp"
 		"Components/Player.cpp"
+		"Components/SecurityCamera.cpp"
 		"Components/ShootAccuracy.cpp"
 		"Components/Soldier1.cpp"
 		"Components/SpawnPoint.cpp"
@@ -42,12 +46,16 @@ add_sources("Components_uber.cpp"
 		"Components/ActorState.h"
 		"Components/AIController.h"
 		"Components/AIDetection.h"
+		"Components/AlarmManager.h"
+		"Components/AlarmSpeaker.h"
 		"Components/BulletTracer.h"
 		"Components/Crosshair.h"
 		"Components/EnemySpawnPoint.h"
+		"Components/Health.h"
 		"Components/IAIActor.h"
 		"Components/IWeapon.h"
 		"Components/Player.h"
+		"Components/SecurityCamera.h"
 		"Components/ShootAccuracy.h"
 		"Components/Soldier1.h"
 		"Components/SpawnPoint.h"
