Add ActorInfo component and EFaction enums

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -25,6 +25,7 @@ add_sources("Code_uber.cpp"
 add_sources("Components_uber.cpp"
     PROJECTS Game
     SOURCE_GROUP "Components"
+		"Components/ActorInfo.cpp"
 		"Components/ActorState.cpp"
 		"Components/AIController.cpp"
 		"Components/AIDetection.cpp"
@@ -43,6 +44,7 @@ add_sources("Components_uber.cpp"
 		"Components/SpawnPoint.cpp"
 		"Components/WeaponAK47.cpp"
 		"Components/WeaponGlock.cpp"
+		"Components/ActorInfo.h"
 		"Components/ActorState.h"
 		"Components/AIController.h"
 		"Components/AIDetection.h"
